# goit-web-hw14

./: .example.env  .gitignore  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 087de8d02d8b_avatar_added.py  277c752f1dd4_init_conf.py  5363413e361e_init_users.py  9c9dbf013fb8_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html  reset_password_template.html
tests/: conftest.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
